test/good/strings/cmp1.px

if "abc" == "abc" and "a" != "b" do
    print "ok"
