test/bad/basic/type02.px

if 42 do
    a = false
